• Fixing a couple layout bugs from previous commit

--- a/client/templates/index/index.styl
+++ b/client/templates/index/index.styl
@@ -357,6 +357,7 @@ blockquote
       color white
       border 4px solid #4caeff
       border-radius 50%
+      height 100%
   .caption
     color #459de6
     display block
